--- a/pom.xml
+++ b/pom.xml
@@ -29,14 +29,32 @@
         </dependency>
     </dependencies>
 
-    <build>
-        <plugins>
-            <!-- Maven Surefire Plugin for running tests -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
-            </plugin>
-        </plugins>
-    </build>
+   <build>
+    <plugins>
+        <!-- Maven Jar Plugin for creating the executable JAR -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>3.2.0</version>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <addClasspath>true</addClasspath>
+                        <classpathPrefix>lib/
+                        </classpathPrefix>
+                        <mainClass>com.example.app.App</mainClass> <!-- Replace with your fully qualified main class -->
+                    </manifest>
+                </archive>
+            </configuration>
+        </plugin>
+        
+        <!-- Maven Surefire Plugin for running tests (if needed) -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.22.2</version>
+        </plugin>
+    </plugins>
+</build>
+
 </project>
