--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
 
       # Docker Build and Push to ECR
 
-      - name: Log in to Amazon ECR
+      - name: Logs in to Amazon ECR
         id: ecr_login
         uses: aws-actions/amazon-ecr-login@v1
 
