--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,3 +66,9 @@ jobs:
       - name: Push Docker image to ECR
         run: |
           docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/comet-app-repo:${{ env.version }}
+
+      - name: Commit updated version
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: "chore: Bump version to ${{ env.version }}"
+          file_pattern: VERSION
