--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,50 +13,68 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      # Set up Java 11 and make it available in the pipeline
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
         with:
-          java-version: 17
+          java-version: 11
           distribution: 'adopt'
 
-      - name: Set up JDK 17 and check Java version
+      - name: Verify Java Version
         run: |
-          export JAVA_HOME=/opt/hostedtoolcache/Java_Adopt_jdk/17.0.13-11/x64
-          export PATH=$JAVA_HOME/bin:$PATH
-          java -version
+          java -version  # Verify that Java 11 is being used
 
+      # Build the project with Maven using Java 11
       - name: Build with Maven
-        run: mvn clean install
+        run: |
+          export JAVA_HOME=/opt/hostedtoolcache/Java_Adopt_jdk/11.0.13-8/x64  # Set JAVA_HOME to Java 11
+          export PATH=$JAVA_HOME/bin:$PATH
+          mvn clean install
 
+      # Run tests with Maven
       - name: Run tests
-        run: mvn test
+        run: |
+          export JAVA_HOME=/opt/hostedtoolcache/Java_Adopt_jdk/11.0.13-8/x64  # Set JAVA_HOME to Java 11
+          export PATH=$JAVA_HOME/bin:$PATH
+          mvn test
 
+      # Run Checkstyle Linting
       - name: Run Checkstyle Linting
-        run: mvn checkstyle:check
+        run: |
+          export JAVA_HOME=/opt/hostedtoolcache/Java_Adopt_jdk/11.0.13-8/x64  # Set JAVA_HOME to Java 11
+          export PATH=$JAVA_HOME/bin:$PATH
+          mvn checkstyle:check
 
+      # Install SonarScanner and configure it to use Java 11
       - name: Install SonarScanner
         run: |
           curl -sSLo sonar-scanner-cli.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip
           unzip sonar-scanner-cli.zip -d $HOME
           export PATH="$HOME/sonar-scanner-4.8.0.2856-linux/bin:$PATH"
+          export JAVA_HOME=/opt/hostedtoolcache/Java_Adopt_jdk/11.0.13-8/x64  # Set JAVA_HOME to Java 11
           echo "PATH updated: $PATH"
 
+      # Verify SonarScanner Installation
       - name: Verify SonarScanner Installation
         run: |
           export PATH="$HOME/sonar-scanner-4.8.0.2856-linux/bin:$PATH"
+          export JAVA_HOME=/opt/hostedtoolcache/Java_Adopt_jdk/11.0.13-8/x64  # Ensure SonarScanner uses Java 11
           sonar-scanner --version
 
+      # Run SonarCloud Analysis
       - name: Run SonarCloud Analysis
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           export PATH="$HOME/sonar-scanner-4.8.0.2856-linux/bin:$PATH"
+          export JAVA_HOME=/opt/hostedtoolcache/Java_Adopt_jdk/11.0.13-8/x64  # Ensure SonarScanner uses Java 11
           sonar-scanner \
             -Dsonar.projectKey=Infotrend-Inc_COMET-JAVA \
             -Dsonar.organization=Infotrend-Inc \
             -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.login=$SONAR_TOKEN 
+            -Dsonar.login=$SONAR_TOKEN
 
+      # Configure AWS credentials
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -64,10 +82,12 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
+      # Log in to Amazon ECR
       - name: Log in to Amazon ECR
         id: ecr_login
         uses: aws-actions/amazon-ecr-login@v1
 
+      # Increment Version
       - name: Increment Version
         id: increment_version
         run: |
@@ -85,17 +105,21 @@ jobs:
           fi
           echo "version=$(cat VERSION)" >> $GITHUB_ENV
 
+      # Display New Version
       - name: Display New Version
         run: echo "New version is ${{ env.version }}"
 
+      # Build Docker image
       - name: Build Docker image
         run: |
           docker build -t ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/comet-app-repo:${{ env.version }} .
 
+      # Push Docker image to ECR
       - name: Push Docker image to ECR
         run: |
           docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/comet-app-repo:${{ env.version }}
 
+      # Commit updated version to the repository
       - name: Commit updated version
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
