--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,24 +26,15 @@ jobs:
 
       # Build the project with Maven using Java 11
       - name: Build with Maven
-        run: |
-          export JAVA_HOME=/opt/hostedtoolcache/Java_Adopt_jdk/11.0.13-8/x64  # Set JAVA_HOME to Java 11
-          export PATH=$JAVA_HOME/bin:$PATH
-          mvn clean install
+        run: mvn clean install
 
       # Run tests with Maven
       - name: Run tests
-        run: |
-          export JAVA_HOME=/opt/hostedtoolcache/Java_Adopt_jdk/11.0.13-8/x64  # Set JAVA_HOME to Java 11
-          export PATH=$JAVA_HOME/bin:$PATH
-          mvn test
+        run: mvn test
 
       # Run Checkstyle Linting
       - name: Run Checkstyle Linting
-        run: |
-          export JAVA_HOME=/opt/hostedtoolcache/Java_Adopt_jdk/11.0.13-8/x64  # Set JAVA_HOME to Java 11
-          export PATH=$JAVA_HOME/bin:$PATH
-          mvn checkstyle:check
+        run: mvn checkstyle:check
 
       # Install SonarScanner and configure it to use Java 11
       - name: Install SonarScanner
@@ -51,14 +42,10 @@ jobs:
           curl -sSLo sonar-scanner-cli.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip
           unzip sonar-scanner-cli.zip -d $HOME
           export PATH="$HOME/sonar-scanner-4.8.0.2856-linux/bin:$PATH"
-          export JAVA_HOME=/opt/hostedtoolcache/Java_Adopt_jdk/11.0.13-8/x64  # Set JAVA_HOME to Java 11
-          echo "PATH updated: $PATH"
 
       # Verify SonarScanner Installation
       - name: Verify SonarScanner Installation
         run: |
-          export PATH="$HOME/sonar-scanner-4.8.0.2856-linux/bin:$PATH"
-          export JAVA_HOME=/opt/hostedtoolcache/Java_Adopt_jdk/11.0.13-8/x64  # Ensure SonarScanner uses Java 11
           sonar-scanner --version
 
       # Run SonarCloud Analysis
@@ -66,8 +53,6 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          export PATH="$HOME/sonar-scanner-4.8.0.2856-linux/bin:$PATH"
-          export JAVA_HOME=/opt/hostedtoolcache/Java_Adopt_jdk/11.0.13-8/x64  # Ensure SonarScanner uses Java 11
           sonar-scanner \
             -Dsonar.projectKey=Infotrend-Inc_COMET-JAVA \
             -Dsonar.organization=Infotrend-Inc \
