--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,43 +13,31 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      # Set up Java 11 and make it available in the pipeline
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: 11
           distribution: 'adopt'
 
-      - name: Verify Java Version
-        run: |
-          java -version  # Verify that Java 11 is being used
-
-      # Build the project with Maven using Java 11
       - name: Build with Maven
         run: mvn clean install
 
-      # Run tests with Maven
       - name: Run tests
         run: mvn test
 
-      # Run Checkstyle Linting
       - name: Run Checkstyle Linting
         run: mvn checkstyle:check
 
-      # Install SonarScanner and configure it to use Java 11
       - name: Install SonarScanner
         run: |
           curl -sSLo sonar-scanner-cli.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip
           unzip sonar-scanner-cli.zip -d $HOME
-          export PATH="$HOME/sonar-scanner-4.8.0.2856-linux/bin:$PATH"
+          echo "export PATH=$HOME/sonar-scanner-4.8.0.2856-linux/bin:\$PATH" >> $GITHUB_ENV
 
-      # Verify SonarScanner Installation
       - name: Verify SonarScanner Installation
-        run: |
-          sonar-scanner --version
+        run: sonar-scanner --version
 
-      # Run SonarCloud Analysis
-      - name: Run SonarCloud Analysis
+      - name: SonarCloud Analysis
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
@@ -57,9 +45,8 @@ jobs:
             -Dsonar.projectKey=Infotrend-Inc_COMET-JAVA \
             -Dsonar.organization=Infotrend-Inc \
             -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.login=$SONAR_TOKEN
+            -Dsonar.login=$SONAR_TOKEN 
 
-      # Configure AWS credentials
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -67,12 +54,10 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      # Log in to Amazon ECR
       - name: Log in to Amazon ECR
         id: ecr_login
         uses: aws-actions/amazon-ecr-login@v1
 
-      # Increment Version
       - name: Increment Version
         id: increment_version
         run: |
@@ -90,21 +75,17 @@ jobs:
           fi
           echo "version=$(cat VERSION)" >> $GITHUB_ENV
 
-      # Display New Version
       - name: Display New Version
         run: echo "New version is ${{ env.version }}"
 
-      # Build Docker image
       - name: Build Docker image
         run: |
           docker build -t ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/comet-app-repo:${{ env.version }} .
 
-      # Push Docker image to ECR
       - name: Push Docker image to ECR
         run: |
           docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/comet-app-repo:${{ env.version }}
 
-      # Commit updated version to the repository
       - name: Commit updated version
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
