--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,7 @@ jobs:
         run: |
           export PATH="$HOME/sonar-scanner-4.8.0.2856-linux/bin:$PATH"
           export PATH="/opt/hostedtoolcache/Java_Adopt_jdk/17.0.13-11/x64/bin:$PATH"
+          export SONAR_SCANNER_OPTS="-Djava.home=/opt/hostedtoolcache/Java_Adopt_jdk/17.0.13-11/x64"
           sonar-scanner \
             -Dsonar.projectKey=Infotrend-Inc_COMET-JAVA \
             -Dsonar.organization=Infotrend-Inc \
