--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=Infotrend-Inc_COMET-JAVA
 
-sonar.organization=Infotrend, Inc.
+sonar.organization=Infotrend-Inc
 
 sonar.host.url=https://sonarcloud.io
 
