--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <checkstyle.version>3.1.2</checkstyle.version>
     </properties>
 
@@ -28,6 +28,13 @@
             <version>5.7.0</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.7.17</version> 
+        </dependency>
+        
     </dependencies>
 
     <build>
@@ -47,7 +54,17 @@
                     </archive>
                 </configuration>
             </plugin>
-
+            <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <version>3.4.2</version>  
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>repackage</goal>  </goals>
+                </execution>
+            </executions>
+        </plugin>
             <!-- Maven Surefire Plugin for running tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
