--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>2.7.17</version> 
         </dependency>
-        
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+            <version>2.7.17</version>
+        </dependency>
     </dependencies>
 
     <build>
