--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,13 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
             <version>2.7.17</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>2.7.17</version>
+            <scope>test</scope>
+         </dependency>
+
     </dependencies>
 
     <build>
